# Ariadnes-Mirror-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
data/: theories.yaml
src/ariadne/: ai.py  api.py  cli.py  config.py  engine.py  extractor.py  kernel.py  mcp_server.py  models.py  persistence.py  research_tasks.py
src/ariadne/data/: theories.yaml
src/ariadne/kernel/: adaptive_immune_system.yaml  arrows_impossibility.yaml  ashby_requisite_variety.yaml  autopoiesis.yaml  axelrod_cooperation.yaml  bateson_ecology_of_mind.yaml  dijkstra_separation_of_concerns.yaml  dunbars_number.yaml  ess_evolutionary_stable_strategy.yaml  federated_learning.yaml  gift_economy.yaml  goodharts_law.yaml  halting_problem.yaml  hayek_grown_order.yaml  hayek_price_system.yaml  jazz_improvisation.yaml  kauffman_nk_landscapes.yaml  lambda_calculus.yaml  lindblom_muddling_through.yaml  luhmann_social_systems.yaml  manifest.json  mimetic_desire.yaml  minsky_instability.yaml  niche_construction_theory.yaml  ooda_loop.yaml  optimal_foraging_theory.yaml  ostrom_iad_framework.yaml  ostrom_polycentric_governance.yaml  ouroboros.yaml  panarchy.yaml  percolation_theory.yaml  polanyi_tacit_knowledge.yaml  predictive_processing.yaml  prigogine_dissipative_structures.yaml  principal_agent_theory.yaml  punctuated_equilibrium.yaml  raft_consensus.yaml  red_queen_hypothesis.yaml  second_law_thermodynamics.yaml  (+8 more)
src/ariadnes_mirror.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_credibility.py  test_engine.py  test_failure_analysis.py  test_full_flow.py  test_kernel.py
