[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadnes-mirror"
version = "0.1.0"
description = "Cross-domain structural mapping and hypothesis generation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "openai",
    "numpy",
    "click",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "mcp[server]"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
ariadne = "ariadne.cli:main"
ariadne-mcp = "ariadne.mcp_server:mcp.run"
